; ModuleID = '/home/carl/AnghaBench/redis/src/extr_pubsub.c_addReplyPubsubPatSubscribed.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_pubsub.c_addReplyPubsubPatSubscribed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32* }
%struct.TYPE_9__ = type { i32 }

@shared = common dso_local global %struct.TYPE_10__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @addReplyPubsubPatSubscribed(%struct.TYPE_9__* %0, i32* %1) #0 {
  %3 = alloca %struct.TYPE_9__*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %6 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = icmp eq i32 %7, 2
  br i1 %8, label %9, label %15

9:                                                ; preds = %2
  %10 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %11 = load i32*, i32** getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @shared, i32 0, i32 1), align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 3
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @addReply(%struct.TYPE_9__* %10, i32 %13)
  br label %18

15:                                               ; preds = %2
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %17 = call i32 @addReplyPushLen(%struct.TYPE_9__* %16, i32 3)
  br label %18

18:                                               ; preds = %15, %9
  %19 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %20 = load i32, i32* getelementptr inbounds (%struct.TYPE_10__, %struct.TYPE_10__* @shared, i32 0, i32 0), align 8
  %21 = call i32 @addReply(%struct.TYPE_9__* %19, i32 %20)
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @addReplyBulk(%struct.TYPE_9__* %22, i32* %23)
  %25 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %3, align 8
  %27 = call i32 @clientSubscriptionsCount(%struct.TYPE_9__* %26)
  %28 = call i32 @addReplyLongLong(%struct.TYPE_9__* %25, i32 %27)
  ret void
}

declare dso_local i32 @addReply(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @addReplyPushLen(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @addReplyBulk(%struct.TYPE_9__*, i32*) #1

declare dso_local i32 @addReplyLongLong(%struct.TYPE_9__*, i32) #1

declare dso_local i32 @clientSubscriptionsCount(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
